feat: add SonarQube config, fix code quality issues, and update all documentation
SonarQube:
- Add sonar-project.properties at root with Java/Python source config and exclusions
- Add sonar-maven-plugin 4.0.0.4121 to parent pom.xml pluginManagement

Code quality fixes (SonarQube rules):
- AuthService: replace inline fully-qualified class names with proper imports (java.util.Set, BadCredentialsException)
- AnalyticsService: extract TypeReference to a static constant (avoid anonymous inner class per call); replace Collectors.toList() with Stream.toList() (Java 16+); remove unused Collectors import
- ProcessedTelemetryListener: use LocalDateTime.now(ZoneOffset.UTC) instead of bare LocalDateTime.now() to avoid timezone-ambiguity (S6350); add ZoneOffset import

Documentation — updated to reflect all current features:
- docs/api.md: add /analytics/stats, /analytics/history, /rules/temperature, /anomaly-stats, /autotrain endpoints; add 409 error code
- docs/ml.md: add /anomaly-stats and /autotrain GET+POST with full examples and description of in-memory history
- docs/frontend.md: add notification bell, online/offline badge, last-seen column, CSV export, alert rules panel, telemetry history chart, anomaly stats KPIs, recent anomalies list, auto-retrain toggle; update ApiService method table
- docs/architecture.md: update analytics-service description (last-seen, history); update Redis storage section; add alert rules section; fix ML platform endpoint list
- docs/usage.md: update all sections with new features (badge, last seen, CSV export, alert rules panel, history chart, anomaly stats, auto-retrain, notification bell)
- README.md: add all new API examples, update feature table, add sonar-project.properties to structure, update Postman count to 50+
- spring-event-iot-platform/docs/event-flow.md: fix consumers list for ProcessedTelemetryEvent; expand propagation flow with accurate threshold logic, analytics ring-buffer, ML consumer, and WARNING alert path
- spring-event-io